@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.793 2008-11-01 14:15:14 ub Exp $
+# $Id: CHANGES,v 1.794 2008-11-07 14:52:51 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -39,6 +39,8 @@
     availabe in online repository packages.
 
 2.3.4 (2008/??/??)
+ - (2008/11/07) Fixed bug# 2730 - Sending mails to M$ Exchange Server 2007
+    fails sometimes with "Bad file descriptor!".
  - (2008/11/01) Fixed bug# 3207 - Expanded articles in wrong order.
  - (2008/10/30) Fixed bug# 2071 - Dead link to online documentation in admin
     interface (AdminState).
